# chinese-numerals

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: characters.rs  lib.rs  longscale.rs  macros.rs  midscale.rs  myriadscale.rs  shortscale.rs
tests/: all_tests.rs
