[package]
name = "chinese-numerals"
version = "0.1.0"
edition = "2021"
description = "Convert numbers to Chinese numerals."
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", optional = true }
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }

[features]
bigint = ["num-bigint", "num-integer", "num-traits"]
