[package]
name = "chinese-numerals"
version = "0.1.2"
edition = "2021"
description = "Convert numbers to Chinese numerals."
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/chinese-numerals"
repository = "https://github.com/amorphobia/chinese-numerals"
homepage = "https://docs.rs/crate/chinese-numerals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", optional = true }
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }

[features]
bigint = ["num-bigint", "num-integer", "num-traits"]

[package.metadata.docs.rs]
all-features = true
